@startuml
abstract class Dispositivo {
    - ubicacion: String
    + <<abstract>> recolectarDatos(): String
    + <<abstract>> generarReporte(): String
}

class DispositivoCosta {
    + recolectarDatos(): String
    + generarReporte(): String
}

class DispositivoSierra {
    + recolectarDatos(): String
    + generarReporte(): String
}

class DispositivoOriente {
    + recolectarDatos(): String
    + generarReporte(): String
}

class P4MonitoreoEjecutor {
    + main(args: String[]): void
}

Dispositivo <|-- DispositivoCosta
Dispositivo <|-- DispositivoSierra
Dispositivo <|-- DispositivoOriente
P4MonitoreoEjecutor --> Dispositivo
@enduml
